--- a/Portafolio/index.html
+++ b/Portafolio/index.html
@@ -10,6 +10,9 @@
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:opsz,wght@6..12,900&display=swap');
     </style>
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Oswald&display=swap');
+    </style>
     <title>Aimar Mendoza</title>
   </head>
   <body>
