--- a/Portafolio/index.html
+++ b/Portafolio/index.html
@@ -13,7 +13,12 @@
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Oswald&display=swap');
     </style>
-    <title>Aimar Mendoza</title>
+    <style>
+      body {
+        margin: 0;
+      }
+    </style>
+    <title>Aimar Mendoza | Full-Stack Web Developer</title>
   </head>
   <body>
     <div id="root"></div>
